--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-jwt": "^3.6.0",
+    "koa-multipart": "0.0.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "mongoose": "^5.10.0"
+    "mongoose": "^5.10.0",
+    "multiparty": "^4.2.2"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0"
